[project]
name = "ComfyUI-kpsss34"
description = "Diffusers custom_node"
version = "1.0.0"
license = {text = "MIT"}
dependencies = [
    	"diffusers",
	"transformers",
	"accelerate",
	"torch",
	"torchvision",
	"safetensors",
	"huggingface-hub",
	"peft"
]

[project.urls]
Repository = "https://github.com/kpsss34/ComfyUI-kpsss34"
